--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,2 @@
-*.c linguist-detectable = false
-*.java linguist-detectable = true
-*.cpp linguist-detectable = true
+* linguist-vendored
+*.java linguist-vendored=false
