--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,2 @@
-*.cpp linguist-detectable=true
-* linguist-vendored
-*.java linguist-vendored=false
+*.cpp linguist-detectable=false
+*.java linguist-detectable=false
